--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
   body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    /* background-color: lightgray; */
     background-color: #242333;
     color: white;
   }
@@ -16,20 +15,18 @@
     text-align: center;
   }
   
+  /*** NAVBAR ***/
+  .site-title {
+    font-size: 2.75rem;
+  }
+
   .nav {
-    /* background-color: rgb(76, 193, 214); */
     background-color: #01B0D3;
-    /* color: white; */
     display: flex;
     justify-content: space-between;
     align-items: stretch;
     gap: 1.75rem;
     padding: 0 1rem;
-  }
-  
-  .site-title {
-    font-size: 2.75rem;
-    /* background-color: transparent; */
   }
   
   .nav ul {
@@ -39,7 +36,6 @@
     display: flex;
     gap: 1rem;
     font-size: 2rem;
-    /* background-color: transparent; */
   }
   
   .nav a {
@@ -49,12 +45,8 @@
     display: flex;
     align-items: center;
     padding: .25rem;
-    /* background-color: transparent; */
   }
   
-  /* .nav li {
-    background-color: transparent;
-  } */
   .nav li.active {
     background-color: rgb(9, 128, 149);
   }
@@ -62,42 +54,25 @@
   .nav li:hover {
     background-color: rgb(9, 128, 149);
   }
+
+  /*** Images ***/
   .mapContainer {
     margin:auto;
-    /* width:80%;
-    height:800px; */
-    /* border: 5px solid red; */
-    /* position: relative;
-    overflow: hidden; */
   }
   .mapContainer img {
     width:800px;
     height:800px;
-    /* object-fit: fill; */
-    /* border: 10px solid black; */
     border: 10px solid #01B0D3;
   }
 
-  /* .createrCodeInput {
+/*** CREATER CODE PAGE ***/
+.parentCodeContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 75vh;
+}
 
-  } */
-.Valid {
-  color: rgb(19, 218, 19);
-  font-size: 18px;
-}
-.Invalid {
-  color: rgb(255, 55, 55);
-  font-size: 18px;
-}
-.newsText {
-  margin:auto;
-  width:800px;
-  height:20%;
-  /* background-color: #01B0D3; */
-  padding: 5px;
-  /* border:5px solid #242333; */
-  font-size: 17px;
-}
 .codeInput {
   border:none;
   padding:10px;
@@ -123,9 +98,21 @@
   background-color: #9a9c9c;
   color:white;
 }
-.parentCodeContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 75vh;
+
+.Valid {
+  color: rgb(19, 218, 19);
+  font-size: 18px;
+}
+.Invalid {
+  color: rgb(255, 55, 55);
+  font-size: 18px;
+}
+
+/*** NEWS PAGE ***/
+.newsText {
+  margin:auto;
+  width:800px;
+  height:20%;
+  padding: 5px;
+  font-size: 17px;
 }
