--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-    background-color: #242333;
-    color: white;
-  }
-  
-  .container {
-    margin: 1rem;
-    text-align: center;
-  }
-  
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  background-color: #242333;
+  color: white;
+  /* background-image: url('./Images/Fortnite_Wallpaper.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  resize: both;
+  min-height: 100vh; */
+}
+
+.container {
+  margin: 1rem;
+  text-align: center;
+}
+
+.backgroundContainer {
+  background-image: url('./Images/Fortnite_Wallpaper.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  resize: both;
+  min-height: 100vh;
+}
+
+.backgroundImage {
+  width:100%;
+  height:87vh;
+}
 /*** NAVBAR ***/
 .site-title {
   font-size: 2.75rem;
