--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ body {
   width:100%;
   height:87vh;
 }
+
 /*** NAVBAR ***/
 .site-title {
   font-size: 2.75rem;
@@ -73,17 +74,25 @@ body {
 }
 
   
-/*** Images ***/
-.imageContainer {
+/*** MAPS ***/
+.mapContainer {
   margin:auto;
 }
-.imageContainer img {
+.mapContainer img {
   width:800px;
   height:700px;
   border: 10px solid #01B0D3;
 }
 
 /*** NEWS PAGE ***/
+.newsContainer {
+  margin:auto;
+}
+.newsContainer img {
+  width:800px;
+  height:700px;
+  border: 10px solid #01B0D3;
+}
 .newsText {
   margin:auto;
   width:800px;
@@ -133,6 +142,7 @@ body {
   font-size: 18px;
 }
 
+/*** NAVBAR RESPONSIVE DESIGN ***/
 @media only screen and (max-width: 800px) {
   .site-title {
     font-size: 2rem;
@@ -166,5 +176,76 @@ body {
     align-items: stretch;
     gap: 0.8rem;
     padding: 0 .2rem;
+  }
+}
+
+/*** Map and News Image and News Text Responsive Design ***/
+@media only screen and (max-width: 835px){
+  .mapContainer img {
+    width:500px;
+    height:400px;
+    border: 10px solid #01B0D3;
+  }
+  
+  .newsContainer img {
+    width:500px;
+    height:400px;
+    border: 10px solid #01B0D3;
+  }
+
+  .newsText {
+    margin:auto;
+    width:500px;
+    height:20%;
+    padding: 5px;
+    font-size: 17px;
+  }
+}
+
+@media only screen and (max-width: 520px){
+  .mapContainer img {
+    width:430px;
+    height:400px;
+    border: 10px solid #01B0D3;
+  }
+  
+  .newsText {
+    margin:auto;
+    width:430px;
+    height:20%;
+    padding: 5px;
+    font-size: 17px;
+  }
+}
+
+@media only screen and (max-width: 535px){
+  .newsContainer img {
+    width:430px;
+    height:400px;
+    border: 10px solid #01B0D3;
+  }
+  
+  .newsText {
+    margin:auto;
+    width:430px;
+    height:20%;
+    padding: 5px;
+    font-size: 17px;
+  }
+}
+
+@media only screen and (max-width: 465px){
+  .newsContainer img {
+    width:400px;
+    height:400px;
+    border: 10px solid #01B0D3;
+  }
+  
+  .newsText {
+    margin:auto;
+    width:400px;
+    height:20%;
+    padding: 5px;
+    font-size: 17px;
   }
 }
