--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,9 @@
   box-sizing: border-box;
 }
 
-body {
+html, body {
   margin: 0;
+  padding: 0;
   font-family: 'Roboto', sans-serif;
   background-color: #242333;
   color: white;
@@ -20,13 +21,13 @@ body {
   text-align: center;
 }
 
-.backgroundContainer {
+/* .backgroundContainer {
   background-image: url('./Images/Fortnite_Wallpaper.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   resize: both;
   min-height: 100vh;
-}
+} */
 
 .backgroundImage {
   width:100%;
@@ -180,6 +181,8 @@ body {
 }
 
 /*** Map and News Image and News Text Responsive Design ***/
+
+/* Map and News */
 @media only screen and (max-width: 835px){
   .mapContainer img {
     width:500px;
@@ -202,9 +205,10 @@ body {
   }
 }
 
+/* Map and News */
 @media only screen and (max-width: 520px){
   .mapContainer img {
-    width:430px;
+    width:400px;
     height:400px;
     border: 10px solid #01B0D3;
   }
@@ -218,6 +222,7 @@ body {
   }
 }
 
+/* News only */
 @media only screen and (max-width: 535px){
   .newsContainer img {
     width:430px;
@@ -234,6 +239,7 @@ body {
   }
 }
 
+/* News only */
 @media only screen and (max-width: 465px){
   .newsContainer img {
     width:400px;
