--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,6 @@ html, body {
   font-family: 'Roboto', sans-serif;
   background-color: #242333;
   color: white;
-  /* background-image: url('./Images/Fortnite_Wallpaper.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  resize: both;
-  min-height: 100vh; */
   background: url("./Images/Fortnite_Wallpaper_4.jpg") no-repeat center center fixed;
   background-size: cover;
   line-height: 1.6;
@@ -24,17 +19,23 @@ html, body {
   text-align: center;
 }
 
-/* .backgroundContainer {
-  background-image: url('./Images/Fortnite_Wallpaper.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  resize: both;
-  min-height: 100vh;
-} */
-
 .backgroundImage {
   width:100%;
   height:87vh;
+}
+
+/*** HOME ***/
+.parentHomeContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 75vh;
+}
+.homeTitle {
+  font-size: 50px;
+}
+.homeBodyText {
+  font-size: 30px;
 }
 
 /*** NAVBAR ***/
@@ -258,16 +259,4 @@ html, body {
     padding: 5px;
     font-size: 17px;
   }
-}
-.parentHomeContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 75vh;
-}
-.homeTitle {
-  font-size: 50px;
-}
-.homeBodyText {
-  font-size: 30px;
 }
