--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html, body {
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
   font-family: 'Roboto', sans-serif;
   background-color: #242333;
   color: white;
@@ -14,15 +16,136 @@ html, body {
   line-height: 1.6;
 }
 
+.header {
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  padding:1.3rem 10%;
+  display:flex;
+  justify-content:space-between;
+  align-items: center;
+  z-index: 100;
+}
+
+.header::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background:rgba(0, 0, 0, .1);
+  backdrop-filter: blur(50px);
+  z-index: -1;
+}
+
+.header::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
+  transition: .5s;
+}
+
+.header:hover::after {
+  left: 100%;
+}
+.logo {
+  font-size: 2rem;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+.navbar a {
+  font-size:1.15rem;
+  color:#fff;
+  text-decoration: none;
+  font-weight: 500;
+  margin-left: 2.5rem;
+}
+
+#check {
+  display: none;
+}
+
+.icons {
+  position: absolute;
+  right: 5%;
+  font-size: 2.8rem;
+  color: white;
+  cursor: pointer;
+  display:none;
+}
+
+@media (max-width: 992px) {
+  .header {
+    padding:1.3rem 5%;
+  }
+}
+
+@media (max-width: 768px) {
+  .icons {
+    display: inline-flex;
+  }
+
+  #check:checked~.icons #menu-icon {
+    display: none;
+  }
+  
+  .icons #close-icon {
+    display: none;
+  }
+
+  #check:checked~.icons #close-icon {
+    display: block;
+  }
+
+  .navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background: rgba(0, 0, 0, .1);
+    backdrop-filter: blur(50px);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .1);
+    overflow: hidden;
+    transition: .3s ease;
+  }
+
+  #check:checked~.navbar {
+    height: 17.7rem;
+  }
+  .navbar a{
+    display: block;
+    font-size: 1.1rem;
+    margin: 1.5rem 0;
+    text-align: center;
+    transform: translateY(-50px);
+    opacity: 0;
+    transition:.3s ease;
+  }
+
+  #check:checked~.navbar a {
+    transform: translateY(0);
+    opacity: 1;
+    transition-delay: calc(.15s * var(--i));
+  }
+}
 .container {
   margin: 1rem;
   text-align: center;
 }
 
-.backgroundImage {
+/* .backgroundImage {
   width:100%;
   height:87vh;
-}
+} */
 
 /*** HOME ***/
 .parentHomeContainer {
@@ -39,7 +162,7 @@ html, body {
 }
 
 /*** NAVBAR ***/
-.site-title {
+/* .site-title {
   font-size: 2.25rem;
 }
 
@@ -76,7 +199,7 @@ html, body {
 
 .nav li:hover {
   background-color: rgb(9, 128, 149);
-}
+} */
 
   
 /*** MAPS ***/
@@ -149,7 +272,7 @@ html, body {
 }
 
 /*** NAVBAR RESPONSIVE DESIGN ***/
-@media only screen and (max-width: 800px) {
+/* @media only screen and (max-width: 800px) {
   .site-title {
     font-size: 2rem;
   }
@@ -183,7 +306,7 @@ html, body {
     gap: 0.8rem;
     padding: 0 .2rem;
   }
-}
+} */
 
 /*** Map and News Image and News Text Responsive Design ***/
 
