--- a/src/App.css
+++ b/src/App.css
@@ -503,14 +503,15 @@ html, body {
 }
 
 .card {
-  background: white;
+  /* background: white; */
   width: 270px;
   margin: 10px;
   border-radius: 15px;
+  background-size: cover;
 }
 
 .card-image {
-  background-color: rgb(0, 0, 0);
+  /* background-color: rgb(0, 0, 0); */
   height: 170px;
   margin-bottom: 15px;
   background-size: cover;
