--- a/src/App.css
+++ b/src/App.css
@@ -548,3 +548,9 @@ html, body {
   transform: scale(1.05);
   transition: all 1s ease;
 }
+
+.cardPriceText img {
+  max-width: 50%;
+  max-height: 50%;
+  object-fit: contain;
+}
