--- a/src/App.css
+++ b/src/App.css
@@ -196,10 +196,7 @@ html, body {
 
   transition: all .5s ease;
 }
-.cardContainer:has(.card:hover) > .card:not(:hover) {
-  scale: .8;
-  opacity: .7;
-}
+
 .cardPriceText img {
   max-width: 50%;
   max-height: 50%;
@@ -539,6 +536,14 @@ html, body {
   .newsText {
     width:220px;
     font-size: 11px;
+  }
+}
+
+/*** SHOP ***/
+@media (min-width: 630px) {
+  .cardContainer:has(.card:hover) > .card:not(:hover) {
+    scale: .8;
+    opacity: .7;
   }
 }
 
