--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,16 @@ html, body {
   font-size: 30px;
 }
 
+.parentFooterText {
+  display: flex;
+  justify-content: center;
+}
+
+.footerText {
+  position: fixed;
+  bottom: 10px;
+}
+
 /*** NAVBAR ***/
 .header {
   position:fixed;
