--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -46,7 +46,7 @@
 
 .navbar a {
 	font-size: 1.15rem;
-	color: #fff;
+	color: #ffd300 ;
 	text-decoration: none;
 	font-weight: 500;
 	margin-left: 2.5rem;
