Updated config, and home.
- Added description in home "Refresh if page does not load".

- Changed vite.config handler from "StaleWhileRevalidate" to "NetworkFirst" to show new data when users open the app rather than old cached data.

- Updated README

--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -3,6 +3,7 @@
 	justify-content: center;
 	align-items: center;
 	height: 65vh;
+	margin-top: 100px;
 }
 
 .homeTitle {
@@ -22,4 +23,13 @@
 .footerText {
 	position: fixed;
 	bottom: 10px;
+}
+
+@media only screen and (max-width: 430px) {
+	.homeTitle {
+		font-size: 45px;
+	}
+	.homeBodyText {
+		font-size: 25px;
+	}
 }
